# dm_calc

./: .gitignore  CMakeLists.txt  dm_calcConfig.cmake.in  dm_calcConfigVersion.cmake.in  setup.sh
Common/: style.hh
DataBase/NeutrinoFlux/: NeutrinoList.txt  ScaleConstants.txt
DataBase/NeutrinoFlux/data/: AtmNu_e.txt  AtmNu_mu.txt  AtmNu_mubar.txt
Detectors/: DetectorEfficiency_NR_LUX_Run3.hh
Detectors/include/: DetectorEfficiency.hh  DetectorEfficiency_ER_LUX_Run3.hh  DetectorEfficiency_NR_LUX_Run3.hh  VDetectorEfficiency.hh
Examples/: PlotNeutrinoER.cc
Models/Backgrounds/: NeutrinoCrossSection.hh  NeutrinoCrossSection_coherent_NR.hh  NeutrinoCrossSection_electroweak_ER.hh  NeutrinoCrossSection_neutrino-nucleus.hh  NeutrinoFlux.cc  NeutrinoRate.cc  NeutrinoRate.hh
Models/Signals/: WimpRate.cc  WimpRate.hh
background/include/: NeutrinoFlux.hh  NeutrinoRate.hh
background/src/: NeutrinoFlux.cc  NeutrinoRate.cc
cmake/: DmCalcConfig.cmake.in  FindDmCalc.cmake
common/: Target.hh
common/include/: FormFactorDataBase.hh  HaloModel.hh  Nucleus.hh  style.hh
common/src/: FormFactorDataBase.cc  HaloModel.cc  Target.cc
data_base/DetectorEfficiency/: LUX_NR_Run3.data
data_base/neutrino_flux/data/: AtmNu_ebar.txt  pp.txt
model_wimp/include/: WimpRate.hh  wimp_calculator.hh
model_wimp/src/: WimpRate.cc  wimp_calculator.cc
